--- a/player.html
+++ b/player.html
@@ -2,7 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="When a mysterious letter appears on the day they are being evicted, Elizabeth and her father can’t believe their luck to discover they've inherited Echoville ">
-    <link href="https://2embed.org/themes/pirate/css/template.min.css?v=1.3" rel="stylesheet">
+    <link href="template.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://2embed.org/themes/pirate/css/custom.min.css?v=1.3">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
     <title> GHEducation Watcher </title>
