--- a/player.html
+++ b/player.html
@@ -30,7 +30,7 @@
 <div id="container">
   <video controls data-poster="https://hirusha21.github.io/View_From_A_Blue_Moon_Trailer-HD.jpg" id="myifurl" class="vid1">
     <!-- Video files -->
-    <source src="https://drfilestreambot.cf/6470/nirOSH%27s+Personal+Meeting+Room.mp4?hash=AgADdw" id="myifurl" type="video/mp4" size="576" />
+    <source src="https://www.w3schools.com/html/mov_bbb.mp4" id="myifurl" type="video/mp4" size="576" />
 
     <!-- Caption files -->
     <track kind="captions" label="English" srclang="en" src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.en.vtt" default />
@@ -139,9 +139,7 @@
     </div> 
 </div>
 </div>
-
-
-    <script>
+<script>
 function myFunction() {
   var x = document.getElementById("myinText").value;
   var linke = "https://fsblink2.herokuapp.com/"+x;
