--- a/player.html
+++ b/player.html
@@ -127,14 +127,14 @@
                                 </div>
                             </div>
                             <!--  /. Tab Content: find by title -->
-                            <button class="btn btn-primary btn-block"  onclick="myFunction()">view</button>
+                            <button class="btn btn-primary btn-block"  onclick="myFunction()">Play Video From ID</button>
                         </div>
                     </div>
                 </div>                               
             </div>
         </div>
         <span class="qe-version text-muted">
-            Quick Lessons Viewer Form v1.1
+            GHEdu Quick Lessons Viewer Form v1.2
         </span>
     </div> 
 </div>
