--- a/GHEduID/index.html
+++ b/GHEduID/index.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Filter Table using Search box in Javascript</title>
+  <title>GHEdu IDs - Play With GHEducations Video Fro IDs</title>
   <link rel="stylesheet" href="./style.css">
 
 </head>
