--- a/player.html
+++ b/player.html
@@ -90,7 +90,7 @@
                     <div class="content my-0 text-right">
                         Find By :
                         <div class="dropdown selection with-arrow ml-10">
-                            <button class="btn " data-toggle="dropdown" type="button">GHEdu ID<i class="fa fa-angle-down ml-5" aria-hidden="true"></i>
+                            <button class="btn " data-toggle="dropdown"  onClick="parent.open('https://hirusha21.github.io/GHEduID/')" type="button">GHEdu ID<i class="fa fa-angle-down ml-5" aria-hidden="true"></i>
                             </button>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                             <div class="find-by-uniq-id">
                                 <h3 class="card-title ">
                                     Try 
-                <span class="text-primary"> GHEdu</span>
+                <span onClick="parent.open('https://hirusha21.github.io/GHEduID/')" class="text-primary"> GHEdu</span>
                 id To Get Lessons :
                                 </h3>
                                 <div class="form-group">
