--- a/player.html
+++ b/player.html
@@ -117,7 +117,7 @@
                             <div class="find-by-uniq-id">
                                 <h3 class="card-title ">
                                     Try 
-                <span onClick="parent.open('https://hirusha21.github.io/GHEduID/')" class="text-primary"> GHEdu</span>
+                <span class="text-primary"><a href="https://hirusha21.github.io/GHEduID/"  target="_blank">GHEdu</a></span>
                 id To Get Lessons :
                                 </h3>
                                 <div class="form-group">
