--- a/GHEduID/index.html
+++ b/GHEduID/index.html
@@ -15,7 +15,7 @@
     </div>
 
     <div class="search_box">
-      <input type="text" id="search_input" placeholder="Fliter Table Using Names">
+      <input type="text" id="search_input" placeholder="Search Lessons Using Lessons Names">
     </div>
   </div>
 
