--- a/player.html
+++ b/player.html
@@ -1,4 +1,5 @@
-<html lang="en"><head>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta name="description" content="When a mysterious letter appears on the day they are being evicted, Elizabeth and her father can’t believe their luck to discover they've inherited Echoville ">
@@ -7,6 +8,46 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha256-eZrrJcwDc/3uDhsdt61sL2oOBY362qM3lon1gyExkL0=" crossorigin="anonymous">
     <title> GHEducation Watcher </title>
     <!-- Global site tag (gtag.js) - Google Analytics -->
+    <style>
+/* The Modal (background) */
+.modal {
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+  background-color: #101010;
+  margin: auto;
+  padding: 20px;
+  border: 2px solid #fbff00;
+  width: 90%;
+}
+
+/* The Close Button */
+.close {
+  color: #ff00bc;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #f00;
+  text-decoration: none;
+  cursor: pointer;
+}
+</style>
 <script async="" src="https://www.googletagmanager.com/gtag/js?id=UA-222453323-1"></script>
 </head>
 <body class="dark-mode with-custom-webkit-scrollbars with-custom-css-scrollbars overflow-x-hidden">
@@ -90,8 +131,20 @@
                     <div class="content my-0 text-right">
                         Find By :
                         <div class="dropdown selection with-arrow ml-10">
-                            <button class="btn " data-toggle="dropdown"  onClick="parent.open('https://hirusha21.github.io/GHEduID/')" type="button">GHEdu ID<i class="fa fa-angle-down ml-5" aria-hidden="true"></i>
+                            <button class="btn " data-toggle="dropdown" id="myBtn" type="button">GHEdu ID<i class="fa fa-angle-down ml-5" aria-hidden="true"></i>
                             </button>
+
+
+<!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close">&times;</span>
+    <iframe src="https://hirusha21.github.io/GHEduID/" frameborder="0" allowfullscreen="allowfullscreen" height="650px" width="100%"></iframe>
+  </div>
+
+</div>
                         </div>
                     </div>
 
@@ -145,6 +198,33 @@ function myFunction() {
   var linke = "https://fsblink2.herokuapp.com/"+x;
     document.getElementById("myifurl").src = linke;
     document.getElementById("deeemo").innerHTML = x;
+}
+</script>
+<script>
+// Get the modal
+var modal = document.getElementById("myModal");
+
+// Get the button that opens the modal
+var btn = document.getElementById("myBtn");
+
+// Get the <span> element that closes the modal
+var span = document.getElementsByClassName("close")[0];
+
+// When the user clicks the button, open the modal 
+btn.onclick = function() {
+  modal.style.display = "block";
+}
+
+// When the user clicks on <span> (x), close the modal
+span.onclick = function() {
+  modal.style.display = "none";
+}
+
+// When the user clicks anywhere outside of the modal, close it
+window.onclick = function(event) {
+  if (event.target == modal) {
+    modal.style.display = "none";
+  }
 }
 </script>
 </body>
