--- a/GHEduID/index.html
+++ b/GHEduID/index.html
@@ -27,8 +27,8 @@
             <div class="lname">
               <span>Lesson Name</span>
             </div>
-            <div class="sizes">
-              <span>Size</span>
+            <div class="times">
+              <span>Time</span>
             </div>
             <div class="ids">
               <span>ID</span>
