add pphublic api ID System

--- a/player.html
+++ b/player.html
@@ -141,7 +141,7 @@
   <!-- Modal content -->
   <div class="modal-content">
     <span class="close">&times;</span>
-    <iframe src="https://hirusha21.github.io/GHEduID/" frameborder="0" allowfullscreen="allowfullscreen" height="650px" width="100%"></iframe>
+    <iframe src="https://hirusha21.github.io/GHEduIDs/" frameborder="0" allowfullscreen="allowfullscreen" height="650px" width="100%"></iframe>
   </div>
 
 </div>
