--- a/player.html
+++ b/player.html
@@ -65,7 +65,7 @@
                 <div class="card p-5 pb-0 border-0 " id="embed-player">
 
     <div class="iframe-wrapper">
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/CDNSFree2/Plyr/plyr.css" />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.2/plyr.css" />
 
 <!--Add a Simple HTML5 Video tag-->
 <div id="container">
@@ -74,13 +74,14 @@
     <source src="https://www.w3schools.com/html/mov_bbb.mp4" id="myifurl" type="video/mp4" size="576" />
 
     <!-- Caption files -->
+    <track kind="captions" label="Sinhala" srclang="si" src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.si.vtt" default />
     <track kind="captions" label="English" srclang="en" src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.en.vtt" default />
     <track kind="captions" label="Français" srclang="fr" src="https://cdn.plyr.io/static/demo/View_From_A_Blue_Moon_Trailer-HD.fr.vtt" />
 
   </video>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.6.7/plyr.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/plyr/3.7.2/plyr.min.js"></script>
 
 <script>
   var controls =
@@ -227,5 +228,41 @@ window.onclick = function(event) {
   }
 }
 </script>
-</body>
+<script>
+    // disable right click
+    document.addEventListener('contextmenu', event => event.preventDefault());
+ 
+    document.onkeydown = function (e) {
+ 
+        // disable F12 key
+        if(e.keyCode == 123) {
+            return false;
+        }
+ 
+        // disable I key
+        if(e.ctrlKey && e.shiftKey && e.keyCode == 73){
+            return false;
+        }
+ 
+        // disable J key
+        if(e.ctrlKey && e.shiftKey && e.keyCode == 74) {
+            return false;
+        }
+ 
+        // disable U key
+        if(e.ctrlKey && e.keyCode == 85) {
+            return false;
+        }
+ 
+        // disable F key
+        if(e.ctrlKey && e.keyCode == 70) {
+            return false;
+        }
+    }
+ 
+</script>
+
+
+
+  </body>
 </html>
