--- a/player.html
+++ b/player.html
@@ -171,7 +171,7 @@
                             <div class="find-by-uniq-id">
                                 <h3 class="card-title ">
                                     Try 
-                <span class="text-primary"><a href="https://geekhirusha.orgfree.com/GHEduID/" target="_blank">GHEdu</a></span>
+                <span class="text-primary"><a href="https://hirusha21.github.io/GHEduID" target="_blank">GHEdu</a></span>
                 id To Get Lessons :
                                 </h3>
                                 <div class="form-group">
