--- a/player.html
+++ b/player.html
@@ -196,7 +196,7 @@
 <script>
 function myFunction() {
   var x = document.getElementById("myinText").value;
-  var linke = "https://fsblink2.herokuapp.com/"+x;
+  var linke = "https://gheduplayer.herokuapp.com/"+x;
     document.getElementById("myifurl").src = linke;
     document.getElementById("deeemo").innerHTML = x;
 }
