add එකතු කළ විට

--- a/msg.html
+++ b/msg.html
@@ -103,7 +103,7 @@ def sum(a, b):\n\
 a = int(input('1 වන අංකය ඇතුලත් කරන්න: '))\n\
 b = int(input('2 වන අංකය ඇතුලත් කරන්න: '))\n\
 \n\
-print(f'{a}යි {b}යි එකතුව {sum(a, b)}වේ.')\n\
+print(f'{a}යි {b}යි එකතු කළ විට {sum(a, b)}ලැබේ.')\n\
 ";var prev_result='in';var site_url="https://www.geekhirusha.orgfree.com/"
 var base_url="https://www.geekhirusha.orgfree.com/"
 var share_url=base_url;var exe_cnt=0;var addthis_share={url:share_url,}
